# basecoat

./: .gitignore  README.md
py/: bands.py  canvas.py  edge.py  kaleido.py  layers.py  plasma.py  punch.py  qbist.py  sample.py  test_bands.py  test_edge.py  test_kaleido.py  test_layers.py  test_punch.py  test_qbist.py
rs/: Cargo.toml
rs/src/: adjust.rs  bands.rs  edge.rs  kaleido.rs  layers.rs  lib.rs  main.rs  plasma.rs  punch.rs  qbist.rs  quad.rs  sample.rs  selection.rs  spiral.rs
spec/: bands.md  edge.md  kaleido.md  layers.md  plasma.md  punch.md  qbist.md  transparent-canvas.md
tools/: pixdiff.py
