[package]
name = "basecoat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "canvas"
path = "src/main.rs"

[dependencies]
image = "0.25"
png   = "0.17"

eframe = { version = "0.29", default-features = false, features = [
    "wgpu",
    "default_fonts",
    "x11",
    "wayland",
] }
egui = "0.29"
rfd  = "0.15"
